--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Account">
+<ion-view view-title="Settings">
   <ion-content>
     <ion-list>
-      <ion-toggle ng-model="settings.enableFriends">
-        Enable Friends
+      <ion-toggle ng-model="settings.enableNFC">
+        Enable NFC
       </ion-toggle>
       <ion-item>
         <button class="button button-dark" ng-click="exitApp()">Exit App</button>
