--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,19 +5,16 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Add Products" icon-off="ion-wand" icon-on="ion-wand" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Add Products" icon-off="ion-wand" icon-on="ion-wand" href="#/tab/start">
+    <ion-nav-view name="tab-start"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Compare" icon-off="ion-stats-bars" icon-on="ion-stats-bars" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Compare" icon-off="ion-stats-bars" icon-on="ion-stats-bars" href="#/tab/compare">
+    <ion-nav-view name="tab-compare"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 
 
