--- a/www/templates/product-detail.html
+++ b/www/templates/product-detail.html
@@ -4,11 +4,12 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="Details: {{getProduct().id}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
+    <div class="list">
+      <div class="list-item" ng-repeat="type in getProduct().techTypes">
+        {{type}}
+      </div>
+    </div>
   </ion-content>
 </ion-view>
